examples/errors/already_declared_axiom.dgf
print "==== DEBUT ====";

define T "s";
define T "m";

print "===== FIN =====";